tests/ui/attr_complex_payload_missing_discriminant.stderr
error: Variant error: All complex enum variants must have explicit discriminants (e.g., = <int>)
 --> tests/ui/attr_complex_payload_missing_discriminant.rs:3:1
  |
3 | #[enum_extend(IntType = "u8")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `enum_extend` (in Nightly builds, run with -Z macro-backtrace for more info)
